RESOLVED FIXED301425
REGRESSION (iOS 26): Sliding side menu looks bad (fixed element not extending under address bar)
https://bugs.webkit.org/show_bug.cgi?id=301425
Summary REGRESSION (iOS 26): Sliding side menu looks bad (fixed element not extending...
Konstantin Arefyev
Reported 2025-10-24 05:05:31 PDT
Created attachment 477187 [details] Screen recording of a drawer being cropped by the address bar On pages that implement things like navigation drawers using `position: fixed` for them they do not take the whole viewport. They get cropped by the address bar and the user can see the content of the page underneath the drawer. STR: 1. Open https://m2.material.io/components/navigation-drawer 2. Ensure that the address bar has transparent background - you might need to scroll the page up and down a little 3. Tap on the burger menu icon in the header to open the drawer Actual results: The drawer is cropped at the bottom and the page content is visible there. Expected results: The drawer takes the full height of the viewport like it does on the iOS 17.5 with Safari 17 Tested on the iPhone simulator with iOS 26.1 beta 3 (23B5073a) Attaching screen recordings from iOS 26.1 and iOS 17.5.
Attachments
Screen recording of a drawer being cropped by the address bar (6.43 MB, video/quicktime)
2025-10-24 05:05 PDT, Konstantin Arefyev
no flags
Screen recording of a drawer taking full viewport on iOS 17.5 (2.58 MB, video/quicktime)
2025-10-24 05:06 PDT, Konstantin Arefyev
no flags
Konstantin Arefyev
Comment 1 2025-10-24 05:06:44 PDT
Created attachment 477188 [details] Screen recording of a drawer taking full viewport on iOS 17.5
Alexey Proskuryakov
Comment 2 2025-10-24 10:52:21 PDT
Thank you for the report, I can reproduce this.
Radar WebKit Bug Importer
Comment 3 2025-10-24 10:52:26 PDT
Wenson Hsieh
Comment 4 2025-10-26 14:50:28 PDT
EWS
Comment 5 2025-10-26 19:09:48 PDT
Committed 302171@main (e94e53c6825e): <https://commits.webkit.org/302171@main> Reviewed commits have been landed. Closing PR #53015 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.